BuildSystem: Make root partition UUID fixed
This allows specifying root as UUID which makes booting nicer experience
on real hardware

--- a/toolchain/grub-legacy-boot.cfg
+++ b/toolchain/grub-legacy-boot.cfg
@@ -1,23 +1,23 @@
 menuentry "banan-os" {
-	multiboot2 /boot/banan-os.kernel root=/dev/sda2
+	multiboot2 /boot/banan-os.kernel root=<ROOT>
 }
 
 menuentry "banan-os (no serial)" {
-	multiboot2 /boot/banan-os.kernel root=/dev/sda2 noserial
+	multiboot2 /boot/banan-os.kernel root=<ROOT> noserial
 }
 
 menuentry "banan-os (only serial)" {
-	multiboot2 /boot/banan-os.kernel root=/dev/sda2 console=ttyS0
+	multiboot2 /boot/banan-os.kernel root=<ROOT> console=ttyS0
 }
 
 menuentry "banan-os (no apic)" {
-	multiboot2 /boot/banan-os.kernel root=/dev/sda2 noapic
+	multiboot2 /boot/banan-os.kernel root=<ROOT> noapic
 }
 
 menuentry "banan-os (no apic, no serial)" {
-	multiboot2 /boot/banan-os.kernel root=/dev/sda2 noapic noserial
+	multiboot2 /boot/banan-os.kernel root=<ROOT> noapic noserial
 }
 
 menuentry "banan-os (no apic, only serial)" {
-	multiboot2 /boot/banan-os.kernel root=/dev/sda2 noapic console=ttyS0
+	multiboot2 /boot/banan-os.kernel root=<ROOT> noapic console=ttyS0
 }
