BuildSystem: Don't hardcode partition UUID
That was dumb :D I can just read the UUID parted assigned...

--- a/toolchain/grub-memdisk.cfg
+++ b/toolchain/grub-memdisk.cfg
@@ -1,2 +1,5 @@
 insmod part_gpt
-configfile (hd0,gpt2)/boot/grub/grub.cfg
+insmod search_fs_uuid
+
+search --no-floppy --fs-uuid --set=root <ROOT_FS>
+configfile /boot/grub/grub.cfg
