--- a/toolchain/grub-uefi.cfg
+++ b/toolchain/grub-uefi.cfg
@@ -1,5 +1,7 @@
 insmod part_gpt
-set root=(hd0,gpt2)
+insmod search_fs_uuid
+
+search --no-floppy --fs-uuid --set=root <ROOT_FS>
 
 insmod all_video
 
