aoc2024: prepare programming environment

--- a/userspace/CMakeLists.txt
+++ b/userspace/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_custom_target(userspace)
 
 #add_subdirectory(aoc2023)
+#add_subdirectory(aoc2024)
 add_subdirectory(libraries)
 add_subdirectory(programs)
 add_subdirectory(tests)
