--- a/userspace/libraries/CMakeLists.txt
+++ b/userspace/libraries/CMakeLists.txt
@@ -21,5 +21,8 @@ foreach(library ${USERSPACE_LIBRARIES})
 		target_link_options(${library_lower} PRIVATE -nolibc)
 		# Default compile options
 		target_compile_options(${library_lower} PRIVATE -g -O2 -Wall -Wextra -Werror)
+
+		# set SONAME as cmake doesn't set it for some reason??
+		set_target_properties(${library_lower} PROPERTIES LINK_FLAGS "-Wl,-soname,${library_lower}.so")
 	endif()
 endforeach()
