Kernel: Add basic support for USB hubs
This is still buggy and some hubs lead to usb transaction errors. I'll
have to debug this but this shouldn't prevent any already working device
from working

--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -96,10 +96,12 @@ set(KERNEL_SOURCES
 	kernel/Timer/PIT.cpp
 	kernel/Timer/RTC.cpp
 	kernel/Timer/Timer.cpp
+	kernel/USB/Controller.cpp
 	kernel/USB/Device.cpp
 	kernel/USB/HID/HIDDriver.cpp
 	kernel/USB/HID/Keyboard.cpp
 	kernel/USB/HID/Mouse.cpp
+	kernel/USB/Hub/HubDriver.cpp
 	kernel/USB/MassStorage/MassStorageDriver.cpp
 	kernel/USB/MassStorage/SCSIDevice.cpp
 	kernel/USB/USBManager.cpp
