Kernel: Restructure terminal initialization
This is still very ugly and will be rewritten in the future :D

--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -89,6 +89,7 @@ set(KERNEL_SOURCES
 	kernel/Terminal/FramebufferTerminal.cpp
 	kernel/Terminal/PseudoTerminal.cpp
 	kernel/Terminal/Serial.cpp
+	kernel/Terminal/TerminalDriver.cpp
 	kernel/Terminal/TTY.cpp
 	kernel/Terminal/VirtualTTY.cpp
 	kernel/Thread.cpp
