resolver: Add support for CNAME
Also rework resolver's send format and convert test-tcp and nslookup to
use getaddrinfo

--- a/userspace/programs/resolver/CMakeLists.txt
+++ b/userspace/programs/resolver/CMakeLists.txt
@@ -6,4 +6,6 @@ add_executable(resolver ${SOURCES})
 banan_link_library(resolver ban)
 banan_link_library(resolver libc)
 
+target_compile_options(resolver PRIVATE -Wno-maybe-uninitialized)
+
 install(TARGETS resolver OPTIONAL)
