--- a/userspace/libraries/LibGUI/CMakeLists.txt
+++ b/userspace/libraries/LibGUI/CMakeLists.txt
@@ -4,10 +4,10 @@ set(LIBGUI_SOURCES
 )
 
 add_library(libgui ${LIBGUI_SOURCES})
-banan_include_headers(libgui ban)
-banan_include_headers(libgui libfont)
-banan_include_headers(libgui libinput)
+banan_link_library(libgui ban)
 banan_link_library(libgui libc)
+banan_link_library(libgui libfont)
+banan_link_library(libgui libinput)
 
 banan_install_headers(libgui)
 install(TARGETS libgui OPTIONAL)
