--- a/userspace/libraries/LibImage/CMakeLists.txt
+++ b/userspace/libraries/LibImage/CMakeLists.txt
@@ -7,6 +7,7 @@ set(LIBIMAGE_SOURCES
 add_library(libimage ${LIBIMAGE_SOURCES})
 banan_link_library(libimage ban)
 banan_link_library(libimage libc)
+banan_link_library(libimage libdeflate)
 
 banan_install_headers(libimage)
 install(TARGETS libimage OPTIONAL)
