Terminal: Add selection and clipboard support
text can now be copied with ctrl+shift+c and pasted with ctrl+shift+v

--- a/userspace/programs/Terminal/CMakeLists.txt
+++ b/userspace/programs/Terminal/CMakeLists.txt
@@ -6,6 +6,7 @@ set(SOURCES
 add_executable(Terminal ${SOURCES})
 banan_link_library(Terminal ban)
 banan_link_library(Terminal libc)
+banan_link_library(Terminal libclipboard)
 banan_link_library(Terminal libfont)
 banan_link_library(Terminal libgui)
 banan_link_library(Terminal libinput)
